src/app/components/nav/nav.component.css
nav {
  width: 100%;
  position: fixed;
  bottom: 0;
  display: flex;
  justify-content: space-evenly;
}
ul {
  width: 400px;
  display: flex;
  justify-content: space-around;
  list-style: none;
  background: var(--dark-blue);
  padding: 0 10px;
  border-radius: 30px 30px 0 0;
}
ul li a {
  text-decoration: none;
  padding: 15px 20px 8px 20px;
  display: flex;
  line-height: 30px;
  flex-direction: column;
  align-items: center;
  letter-spacing: 1px;
  color: var(--white);
}
.feather {
  color: var(--white);
}
ul li a:hover {
  transition: all 0.2s ease-in-out;
  background: var(--light-blue);
}
@media only screen and (max-width: 568px) {
  .feather {
    width: 22px;
    height: 22px;
  }
  ul {
    width: 100%;
    border-left: none;
    border-right: none;
  }
  ul li a {
    font-size: 15px;
    padding: 10px 15px 3px 15px;
  }
}

